--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = mega2560
+default_envs = BIGTREE_SKR_PRO
 include_dir  = Marlin
 extra_configs =
     Marlin/config.ini
@@ -277,11 +277,15 @@ monitor_eol       = LF
 monitor_echo      = yes
 monitor_filters   = colorize, time, send_on_enter
 
+; [env:black_f407ve]
+; platform         = ststm32
+; upload_port      = /dev/cu.usbmodem*
+; board            = black_f407ve
+; upload_protocol  = blackmagic
+
 #
 # Just print the dependency tree
 #
 [env:include_tree]
-platform         = atmelavr
-board            = megaatmega2560
 build_flags      = -c -H -std=gnu++11 -Wall -Os -D__MARLIN_FIRMWARE__
 build_src_filter = +<src/MarlinCore.cpp>
